Add about me section

--- a/intro_to_ndarray.ipynb
+++ b/intro_to_ndarray.ipynb
@@ -43,6 +43,71 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0a0941ee-52b5-4967-8b47-2ea3db9fbc26",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Who am I?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "444a2cb2-48c6-49cf-94ed-105f2c117569",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
+    "* Graduated with a BSc in Mathematics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8db5d652-5515-4bec-84d4-84b6d5ba65f9",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
+    "* Maintainer of SciPy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c19878ac-531a-41f8-8705-d21eb57c78b3",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
+    "* Currently work as a software developer at BHP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe66038a-ef6c-400c-a7f0-ee393c872c6b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
+    "* Please ask questions!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "11b92bae-024f-41b0-aca0-bc8bd2ee435d",
    "metadata": {
     "slideshow": {
@@ -2649,8 +2714,8 @@
    "outputs": [],
    "source": [
     "def pdist_numpy(points):\n",
-    "    difference_squared = (points[np.newaxis, :] - points[:, np.newaxis]) ** 2\n",
-    "    distance_squared = np.sum(difference_squared, -1)\n",
+    "    diff_squared = (points[np.newaxis, :] - points[:, np.newaxis]) ** 2\n",
+    "    distance_squared = np.sum(diff_squared, -1)\n",
     "    distance = np.sqrt(distance_squared)\n",
     "    return distance"
    ]
