Add numpy logo to slideshow

--- a/intro_to_ndarray.ipynb
+++ b/intro_to_ndarray.ipynb
@@ -10,7 +10,9 @@
     "tags": []
    },
    "source": [
-    "# Introducing NumPy's *ndarray*"
+    "# Introducing NumPy's *ndarray*\n",
+    "\n",
+    "![numpy_logo](images/numpylogoicon.png)"
    ]
   },
   {
