Add example of numpy finding black holes

--- a/intro_to_ndarray.ipynb
+++ b/intro_to_ndarray.ipynb
@@ -20,7 +20,7 @@
    "id": "f8d8f165-9f2a-46bf-add4-63534e6ef1bd",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     },
     "tags": []
    },
@@ -30,17 +30,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "539955dd-7a0a-4f96-8902-a7c29a2fae9b",
+   "id": "6e9d5624-8b3a-4cf0-9ec2-818024bfa1de",
    "metadata": {
     "slideshow": {
-     "slide_type": "notes"
+     "slide_type": "subslide"
     },
     "tags": []
    },
    "source": [
-    "* In 1916 Albert Einstein predicted the existence of gravitational waves\n",
-    "* 100 years later their existence is confirmed by LIGO\n",
-    "* The LIGO scientists used NumPy in their discovery"
+    "![gravitational_waves](images/blackhole.jpg)"
    ]
   },
   {
