Add pictures to explain why numpy is faster

--- a/intro_to_ndarray.ipynb
+++ b/intro_to_ndarray.ipynb
@@ -2776,7 +2776,7 @@
     "tags": []
    },
    "source": [
-    "# Why is NumPy faster?"
+    "# Extension: Why is NumPy faster?"
    ]
   },
   {
@@ -2789,7 +2789,20 @@
     "tags": []
    },
    "source": [
-    "## Implemented in C"
+    "## A Python Integer is more than a Number"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "147f80f5-aabb-42ff-9c6f-cf39f4d39982",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
+    "![cint_vs_pyint](images/cint_vs_pyint.png)"
    ]
   },
   {
@@ -2802,7 +2815,7 @@
     "tags": []
    },
    "source": [
-    "## Contiguous Memory"
+    "## A Python List is more than a list"
    ]
   },
   {
@@ -2810,12 +2823,12 @@
    "id": "c736d177-a312-49f3-8e67-33feae74ec7d",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     },
     "tags": []
    },
    "source": [
-    "## Vectorized Instructions"
+    "![array_vs_list](images/array_vs_list.png)"
    ]
   }
  ],
