Give fancy indexing example on same slide

--- a/intro_to_ndarray.ipynb
+++ b/intro_to_ndarray.ipynb
@@ -2284,7 +2284,7 @@
    "id": "2a537b27-1ad2-4778-aaa1-4ba2e8248e6f",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     },
     "tags": []
    },
@@ -2311,7 +2311,7 @@
    "id": "ff16ba73-3b3c-43e2-bac3-70d032419280",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     },
     "tags": []
    },
@@ -2326,7 +2326,7 @@
    "id": "cb3c1210-3ef2-4edc-bbb4-7f3e0cebd2ea",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     },
     "tags": []
    },
