Split long slide into fragments

--- a/intro_to_ndarray.ipynb
+++ b/intro_to_ndarray.ipynb
@@ -129,9 +129,45 @@
     "tags": []
    },
    "source": [
-    "* NumPy is the fundamental package for scientific computing in Python.\n",
-    "* It is a Python library that provides a multidimensional array object, and an assortment of routines for fast operations on arrays.\n",
-    "* Much of NumPy is written in compiled languages, mainly C/Fortran.\n",
+    "* NumPy is the fundamental package for scientific computing in Python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a704406-620b-4d74-9cda-1a20e9949300",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
+    "* It is a Python library that provides a multidimensional array object, and an assortment of routines for fast operations on arrays."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb052c67-edcd-4968-aa2e-de03c85b8383",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
+    "* Much of NumPy is written in compiled languages, mainly C/Fortran."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "241ca203-4cb4-4381-b835-f454bb66e22e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
     "* At the core of the NumPy package, is the **ndarray** object."
    ]
   },
