Add section on why NumPy is faster

--- a/intro_to_ndarray.ipynb
+++ b/intro_to_ndarray.ipynb
@@ -2825,7 +2825,7 @@
     "tags": []
    },
    "source": [
-    "## A Python Integer is more than a Number"
+    "## A Python Integer is more than an int"
    ]
   },
   {
@@ -2865,6 +2865,58 @@
    },
    "source": [
     "![array_vs_list](images/array_vs_list.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d7e7c90-717a-495e-bc61-0143715cd0c4",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "## We can use this to our advantage!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89a624bb-c2de-4c1c-bd68-793355f0d47e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
+    "* We only have to check the type of the array, not each element of the array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d63f777-46ff-4151-a168-9fc194672d04",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
+    "* The memory is contiguous"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fcd4a86-b73e-48a3-aa4f-c893bbdb43b9",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
+    "* The CPU can use SIMD instructions"
    ]
   }
  ],
